// Vitest Snapshot v1

exports[`BoxMessage Render > Process data in methods PublicKey 1`] = `
"<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface mx-auto py-6 border\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title text-center d-flex justify-center pa-5\\">
    <div><i class=\\"mdi-key mdi v-icon notranslate v-theme--light v-icon--size-x-large\\" aria-hidden=\\"true\\" data-test=\\"boxMessage-icon\\"></i></div>
  </div>
  <div class=\\"v-card-title d-flex justify-center\\">
    <div class=\\"text-h5\\" data-test=\\"boxMessage-title\\"> Looks like you don't have any Public Keys</div>
  </div>
  <div class=\\"d-flex justify-center flex-column\\">
    <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--variant-text text-center listText mg-fix\\">
      <!----><span class=\\"v-list-item__underlay\\"></span>
      <!---->
      <div class=\\"v-list-item__content\\">
        <!---->
        <!---->
        <div data-test=\\"0-boxMessage-text\\">You can connect to your devices using password-based logins, but we strongly recommend using SSH key pairs instead.</div>
      </div>
      <!---->
    </div>
    <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--variant-text text-center listText mg-fix\\">
      <!----><span class=\\"v-list-item__underlay\\"></span>
      <!---->
      <div class=\\"v-list-item__content\\">
        <!---->
        <!---->
        <div data-test=\\"1-boxMessage-text\\">SSH keys are more secure than passwords and can help you log in without having to remember long passwords.</div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"d-flex justify-center flex-column\\">
    <!-- eslint-disable vue/no-v-html -->
    <!-- eslint-enable vue/no-v-html-->
  </div>
  <div class=\\"v-card-actions justify-center pt-8 pb-0\\">
    <!--v-if--><span><button type=\\"button\\" class=\\"v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated\\" disabled=\\"\\" aria-describedby=\\"v-tooltip-2\\" tabindex=\\"0\\" aria-label=\\"Dialog Add Public Key\\" data-test=\\"public-key-add-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
    <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> Add Public Key </span>
    <!---->
    <!----></button>
    <!---->
    <!---->
    <!----></span>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`BoxMessage Render > Renders the component 1`] = `
"<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface mx-auto py-6 border\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title text-center d-flex justify-center pa-5\\">
    <div><i class=\\"mdi-cellphone-link mdi v-icon notranslate v-theme--light v-icon--size-x-large\\" aria-hidden=\\"true\\" data-test=\\"boxMessage-icon\\"></i></div>
  </div>
  <div class=\\"v-card-title d-flex justify-center\\">
    <div class=\\"text-h5\\" data-test=\\"boxMessage-title\\"> Looks like you don't have any Device</div>
  </div>
  <div class=\\"d-flex justify-center flex-column\\">
    <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--variant-text text-center listText mg-fix\\">
      <!----><span class=\\"v-list-item__underlay\\"></span>
      <!---->
      <div class=\\"v-list-item__content\\">
        <!---->
        <!---->
        <div data-test=\\"0-boxMessage-text\\">In order to register a device on ShellHub, you need to install ShellHub agent onto it.</div>
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"d-flex justify-center flex-column\\">
    <!-- eslint-disable vue/no-v-html -->
    <div class=\\"v-list-item v-theme--light v-list-item--density-default v-list-item--variant-text text-center listText mg-fix mt-n3\\">
      <!----><span class=\\"v-list-item__underlay\\"></span>
      <!---->
      <div class=\\"v-list-item__content\\">
        <!---->
        <!---->
        <div class=\\"justify-center\\" data-test=\\"0-boxMessage-text\\">
          <p>The easiest way to install ShellHub agent is with our automatic one-line installation
            script, which works with all Linux distributions that have Docker installed and
            properly set up.
            <a target=\\"_blank\\" href=\\"https://docs.shellhub.io/getting-started/registering-device/\\">See More</a>.
          </p>
        </div>
      </div>
      <!---->
    </div><!-- eslint-enable vue/no-v-html-->
  </div>
  <div class=\\"v-card-actions justify-center pt-8 pb-0\\"><button type=\\"button\\" class=\\"v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated\\" tabindex=\\"0\\" aria-label=\\"Dialog Add device\\" data-test=\\"device-add-btn\\" data-v-51a05120=\\"\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
      <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"> Add Device </span>
      <!---->
      <!---->
    </button>
    <!---->
    <!---->
    <!--v-if-->
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;
